hgweb: move changeset "tags" to a template in map file (gitweb and monoblue)
Less duplication and it's also easier to add extra "tags" everywhere at once.

These aren't tags as defined `hg help glossary` (hence the quotes), they are
simply called that. They include branch name (in different styles if changeset
is a head of that branch or not), (actual) tags and bookmarks. Good candidates
to add to this list would be changeset phase and obsoletion status.

--- a/mercurial/templates/gitweb/changelogentry.tmpl
+++ b/mercurial/templates/gitweb/changelogentry.tmpl
@@ -2,7 +2,7 @@
  <a class="title" href="{url|urlescape}rev/{node|short}{sessionvars%urlparameter}">
   <span class="age">{date|rfc822date}</span>
   {desc|strip|firstline|escape|nonempty}
-  <span class="logtags">{inbranch%inbranchtag}{branches%branchtag}{tags%tagtag}{bookmarks%bookmarktag}</span>
+  {alltags}
  </a>
 </div>
 <div class="title_text">
