--- a/mercurial/templates/gitweb/changeset.tmpl
+++ b/mercurial/templates/gitweb/changeset.tmpl
@@ -32,7 +32,7 @@ changeset |
 <div>
  <a class="title" href="{url|urlescape}raw-rev/{node|short}">
   {desc|strip|escape|firstline|nonempty}
-  <span class="logtags">{inbranch%inbranchtag}{branches%branchtag}{tags%tagtag}{bookmarks%bookmarktag}</span>
+  {alltags}
  </a>
 </div>
 <div class="title_text">
