--- a/mercurial/templates/paper/graph.tmpl
+++ b/mercurial/templates/paper/graph.tmpl
@@ -62,7 +62,7 @@ var data = {jsdata|json};
 var graph = new Graph();
 graph.scale({bg_height});
 
-graph.vertex = function(x, y, color, parity, cur) \{
+graph.vertex = function(x, y, radius, color, parity, cur) \{
 	
 	this.ctx.beginPath();
 	color = this.setColor(color, 0.25, 0.75);
