hgweb: move common vertex code to Graph.prototype
Just to give some context to the return values: vertex() needs to return two
HTML elements as strings, <li> to be used as a background and a <li> to be
shown in foreground. The latter was made obsolete recently when changesets
started to be rendered server-side, but background elements are still useful
for now.

--- a/mercurial/templates/spartan/graph.tmpl
+++ b/mercurial/templates/spartan/graph.tmpl
@@ -44,21 +44,8 @@ var graph = new Graph();
 graph.scale({bg_height});
 
 graph.vertex = function(x, y, radius, color, parity, cur) \{
-	
-	this.ctx.beginPath();
-	color = this.setColor(color, 0.25, 0.75);
-	this.ctx.arc(x, y, radius, 0, Math.PI * 2, true);
-	this.ctx.fill();
-	
-	var bg = '<li class="bg parity' + parity + '"></li>';
-	var left = (this.bg_height - this.box_size) + (this.columns + 1) * this.box_size;
-	var item = document.querySelector('[data-node="' + cur.node + '"]');
-	if (item) \{
-		item.style.paddingLeft = left + 'px';
-	}
-
-	return [bg, ''];
-	
+	Graph.prototype.vertex.apply(this, arguments);
+	return ['<li class="bg parity' + parity + '"></li>', ''];
 }
 
 graph.render(data);
