--- a/mercurial/templates/paper/graph.tmpl
+++ b/mercurial/templates/paper/graph.tmpl
@@ -63,22 +63,8 @@ var graph = new Graph();
 graph.scale({bg_height});
 
 graph.vertex = function(x, y, radius, color, parity, cur) \{
-	
-	this.ctx.beginPath();
-	color = this.setColor(color, 0.25, 0.75);
-	this.ctx.arc(x, y, radius, 0, Math.PI * 2, true);
-	this.ctx.fill();
-	
-	var bg = '<li class="bg"></li>';
-	var left = (this.bg_height - this.box_size) + (this.columns + 1) * this.box_size;
-
-	var item = document.querySelector('[data-node="' + cur.node + '"]');
-	if (item) \{
-		item.style.paddingLeft = left + 'px';
-	}
-	
-	return [bg, ''];
-	
+	Graph.prototype.vertex.apply(this, arguments);
+	return ['<li class="bg"></li>', ''];
 }
 
 graph.render(data);
