paper: minor adjustments to table styles
Adding a bit of padding to table columns on e.g. /log means content and headers
are better aligned: headers already have this padding.

Right margin is removed from #changesetEntry th because elements with display:
table-cell (such as <th>) ignore margins anyway.

--- a/mercurial/templates/static/style-paper.css
+++ b/mercurial/templates/static/style-paper.css
@@ -213,6 +213,7 @@ h3 {
 }
 
 .bigtable td {
+  padding: 1px 4px;
   vertical-align: top;
 }
 
@@ -431,7 +432,6 @@ span.followlines-select .btn-followlines {
   text-align: right;
   font-weight: normal;
   color: #999;
-  margin-right: .5em;
   vertical-align: top;
 }
 
