hgweb: make .info a block element by default
Using a <div> instead of a <span> with "display: block" makes more sense.

While at it, let's adjust top margin in monoblue so that text in .info doesn't
overlap changeset "tags" elements (they are quite large in monoblue).

--- a/mercurial/templates/gitweb/graphentry.tmpl
+++ b/mercurial/templates/gitweb/graphentry.tmpl
@@ -3,5 +3,5 @@
   <a class="list" href="{url|urlescape}rev/{node|short}{sessionvars%urlparameter}"><b>{desc|strip|firstline|escape|nonempty}</b></a>
  </span>
  {alltags}
- <span class="info">{date|age}, by {author|person}</span>
+ <div class="info">{date|age}, by {author|person}</div>
 </li>
