--- a/mercurial/templates/paper/graphentry.tmpl
+++ b/mercurial/templates/paper/graphentry.tmpl
@@ -3,5 +3,5 @@
   <a href="{url|urlescape}rev/{node|short}{sessionvars%urlparameter}">{desc|strip|firstline|escape|nonempty}</a>
  </span>
  {alltags}
- <span class="info"><span class="age">{date|rfc822date}</span>, by {author|person}</span>
+ <div class="info"><span class="age">{date|rfc822date}</span>, by {author|person}</div>
 </li>
