--- a/mercurial/templates/spartan/graphentry.tmpl
+++ b/mercurial/templates/spartan/graphentry.tmpl
@@ -2,5 +2,5 @@
  <span class="desc">
   <a href="{url|urlescape}rev/{node|short}{sessionvars%urlparameter}">{desc|strip|firstline|escape|nonempty}</a>
  </span>
- <span class="info"><span class="age">{date|rfc822date}</span>, by {author|person}</span>
+ <div class="info"><span class="age">{date|rfc822date}</span>, by {author|person}</div>
 </li>
