--- a/mercurial/templates/static/style-gitweb.css
+++ b/mercurial/templates/static/style-gitweb.css
@@ -302,23 +302,22 @@ canvas {
 	margin: 0;
 }
 
-ul#nodebgs {
+ul#graphnodes {
 	list-style: none inside none;
 	padding: 0;
 	margin: 0;
-	top: -0.7em;
 }
 
-ul#graphnodes li, ul#nodebgs li {
-	height: 39px;
+ul#graphnodes li {
+	position: relative;
+	height: 37px;
+	overflow: visible;
+	padding-top: 2px;
 }
 
-ul#graphnodes {
+ul#graphnodes li .fg {
 	position: absolute;
 	z-index: 10;
-	top: -0.8em;
-	list-style: none inside none;
-	padding: 0;
 }
 
 ul#graphnodes li .info {
