hgweb: remove unused second argument of nextPageVarGet()
nextPageVarGet is a function that's used in ajaxScrollInit() to produce URL of
the next page. Before f84b01257e06, its second argument previousVal was a
number on /graph pages, and the code was simply adding 60 to it and returning
the resulting value. Now previousVal can only be a string containing changeset
hash, which can't be used the same way (and in fact isn't used in any way).

--- a/mercurial/templates/gitweb/graph.tmpl
+++ b/mercurial/templates/gitweb/graph.tmpl
@@ -57,7 +57,7 @@ graph.render(data);
     ajaxScrollInit(
             '{url|urlescape}graph/%next%{graphvars%urlparameter}',
             '{nextentry%"{node}"}', <!-- NEXTHASH
-            function (htmlText, previousVal) \{
+            function (htmlText) \{
                 var m = htmlText.match(/'(\w+)', <!-- NEXTHASH/);
                 return m ? m[1] : null;
             },
