--- a/mercurial/templates/monoblue/graph.tmpl
+++ b/mercurial/templates/monoblue/graph.tmpl
@@ -51,7 +51,7 @@
     ajaxScrollInit(
             '{url|urlescape}graph/%next%{graphvars%urlparameter}',
             '{nextentry%"{node}"}', <!-- NEXTHASH
-            function (htmlText, previousVal) \{
+            function (htmlText) \{
                 var m = htmlText.match(/'(\w+)', <!-- NEXTHASH/);
                 return m ? m[1] : null;
             },
